  TEZ-3063. Tez UI: Display Input, Output, Processor, Source and Sink configurations under a vertex
  TEZ-3281. Tez UI: Swimlane improvements
  TEZ-3264. Tez UI: UI discrepancies
  TEZ-3292. Tez UI: UTs breaking with timezone change
  TEZ-3288. Tez UI: Display more details in the error bar
  TEZ-3318. Tez UI: Polling is not restarted after RM recovery

Release 0.8.5: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

Release 0.8.4: In progress

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3323. Update licese and notice for xml-apis jar. Also update year in notice to 2016.
  TEZ-3223. Support a NullHistoryLogger to disable history logging if needed.
  TEZ-3286. Allow clients to set processor reserved memory per vertex (instead of per container).
  TEZ-3293. Fetch failures can cause a shuffle hang waiting for memory merge that never starts.
  TEZ-3314. Double counting input bytes in MultiMRInput.
  TEZ-3308. Add counters to capture input split length.
  TEZ-3302. Add a version of processorContext.waitForAllInputsReady and waitForAnyInputReady with a timeout.
  TEZ-3291. Optimize splits grouping when locality information is not available.
  TEZ-3305. TestAnalyzer fails on Hadoop 2.7.
  TEZ-3304. TestHistoryParser fails with Hadoop 2.7.
  TEZ-3296. Tez job can hang if two vertices at the same root distance have different task requirements
  TEZ-3294. DAG.createDag() does not clear local state on repeat calls.
  TEZ-3297. Deadlock scenario in AM during ShuffleVertexManager auto reduce.
  TEZ-3296. Tez fails to compile against hadoop 2.8 after MAPREDUCE-5870
  TEZ-3290. Set full task attempt id string in MRInput configuration object.
  TEZ-3280. LOG MRInputHelpers split generation message as INFO
  TEZ-3257. Fix flaky test TestUnorderedPartitionedKVWriter.
  TEZ-3237. Corrupted shuffle transfers to disk are not detected during transfer
  TEZ-3246. Improve diagnostics when DAG killed by user
  TEZ-3258. Jvm Checker does not ignore DisableExplicitGC when checking JVM GC options.