@@ -785,6 +785,7 @@ public class TestHistoryEventTimelineConversion {
   @SuppressWarnings("unchecked")
   @Test(timeout = 5000)
   public void testConvertVertexFinishedEvent() {
+    String vertexName = "v1";
     long initRequestedTime = random.nextLong();
     long initedTime = random.nextLong();
     long startRequestedTime = random.nextLong();
@@ -795,7 +796,7 @@ public class TestHistoryEventTimelineConversion {
     taskStats.put("BAR", 200);
     VertexStats vertexStats = new VertexStats();
 
-    VertexFinishedEvent event = new VertexFinishedEvent(tezVertexID, "v1", 1, initRequestedTime,
+    VertexFinishedEvent event = new VertexFinishedEvent(tezVertexID, vertexName, 1, initRequestedTime,
         initedTime, startRequestedTime, startTime, finishTime, VertexState.ERROR,
         "diagnostics", null, vertexStats, taskStats,
         new ServicePluginInfo().setContainerLauncherName("abc")
@@ -825,6 +826,8 @@ public class TestHistoryEventTimelineConversion {
     Assert.assertEquals(HistoryEventType.VERTEX_FINISHED.name(), timelineEvent.getEventType());
     Assert.assertEquals(finishTime, timelineEvent.getTimestamp());
 
+    Assert.assertEquals(vertexName,
+        timelineEntity.getOtherInfo().get(ATSConstants.VERTEX_NAME));
     Assert.assertEquals(finishTime,
         ((Long) timelineEntity.getOtherInfo().get(ATSConstants.FINISH_TIME)).longValue());
     Assert.assertEquals(finishTime - startTime,
