@@ -70,6 +70,7 @@ ALL CHANGES:
   TEZ-3292. Tez UI: UTs breaking with timezone change
   TEZ-3288. Tez UI: Display more details in the error bar
   TEZ-3318. Tez UI: Polling is not restarted after RM recovery
+  TEZ-3329. Tez ATS data is incomplete for a vertex which fails or gets killed before initialization
 
 Release 0.8.5: Unreleased
 
